[package]
name = "memgrep"
authors = ["Eldad Zack <eldad@fogrefinery.com>"]
version = "0.1.0"
edition = "2021"
description = "Search for strings in process memory"
repository = "https://github.com/eldad/memgrep"
license = "MIT"
categories = ["command-line-utilities", "development-tools::debugging"]

[dependencies]
anyhow = "1.0.64"
clap = { version = "3.2.20", features = ["derive"] }
hex = "0.4.3"
memmem = "0.1.1"
thiserror = "1.0.34"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
