[package]
name = "memgrep"
authors = ["Eldad Zack <eldad@fogrefinery.com>"]
version = "0.2.0"
edition = "2021"
description = "Search for strings in process memory"
repository = "https://github.com/eldad/memgrep"
license = "MIT"
categories = ["command-line-utilities", "development-tools::debugging"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4.3"
memmem = "0.1.1"
thiserror = "1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
